<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/light_green"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:fontFamily="@font/grab_fonts"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/app_name"/>


        <TextView
            android:id="@+id/tvLetsRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"
            android:text="@string/let_s_register"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"
            />

        <TextView
            android:id="@+id/tvDoYouHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@id/tvLetsRegister"
            app:layout_constraintTop_toBottomOf="@id/tvLetsRegister"
            app:layout_constraintEnd_toEndOf="@id/tvLetsRegister"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/do_you_have_an_account_log_in"
            />

        <EditText
            android:id="@+id/edFirstNameRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/tvDoYouHaveAccount"
            style="@style/editText"
            android:hint="@string/first_name"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/edLastNameRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edFirstNameRegister"
            style="@style/editText"
            android:hint="@string/last_name"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edEmailRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edLastNameRegister"
            style="@style/editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/edittextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailRegister"
            style="@style/editText"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterRegister"
            android:layout_width="0dp"
            android:layout_height="55dp"
            style="@style/greenButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/edPasswordRegister"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            app:spinning_bar_color="@color/white"/>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>