<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddresses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageAddressClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_close"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tvPaymentMethods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/addresses"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/imageAddressClose"
                app:layout_constraintStart_toEndOf="@id/imageAddressClose"
                app:layout_constraintTop_toTopOf="@+id/imageAddressClose" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/topLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:backgroundTint="@color/g_blue_gray200"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddresses" />

    <EditText
        android:id="@+id/edAddressTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/address_location_ex_home"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/topLine"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edFullName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/full_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/edAddressTitle"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/white_background"
        android:fontFamily="@font/poppins_light"
        android:layout_marginTop="10dp"
        android:gravity="start|center_vertical"
        android:hint="@string/phone_number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/edFullName" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/edPhone"
        app:layout_constraintVertical_bias="0.494"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/g_gray700"
            android:textSize="12dp"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/green_backgroud"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            tools:ignore="SpUsage" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbarAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/g_gray700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="45dp"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>